--- a/Typescript/package.json
+++ b/Typescript/package.json
@@ -9,7 +9,8 @@
     "lite-server": "^2.6.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "lite-server"
   },
   "author": "",
   "license": "ISC",
